refactor: formatting with prettier

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,16 @@
         {{ content }}
 
         <div class="credits">
-          &copy;&nbsp;{{
-          "now" | date: "%Y" }}&nbsp;{{site.author}} <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0; display: inline" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png"></a> &nbsp; • &nbsp; Theme&nbsp;
+          &copy;&nbsp;{{ "now" | date: "%Y" }}&nbsp;{{site.author}}
+          <a
+            rel="license"
+            href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
+            ><img
+              alt="Creative Commons License"
+              style="border-width: 0; display: inline"
+              src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png"
+          /></a>
+          &nbsp; • &nbsp; Theme&nbsp;
           <a
             href="https://github.com/abhinavs/moonwalk"
             target="_blank"
